--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             <div class="row" id="current-city-box">
               <h1 id="current-city"></h1> 
               <h1 id="date"></h1>
-              <h1 id="weather-icon"></h1>
+              <img id="weather-icon"></img>
               <div id="temp"></div>
               <div id="wind"></div>
               <div id="humidity"></div>
-              <div id="uvindex"></div>
+              <!-- <div id="uvindex"></div> -->
             </div>
            
             <div class="row" id="forecast">
@@ -88,7 +88,7 @@
           </div>
         </div>
     </main>
-
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="./Assets/script.js"></script>
   </body>
 </html>
